<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:carview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/prictureCard"
    android:layout_height="@dimen/height_cardview"
    carview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@color/backgroundLogin"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/baclgroundtext_card"
            >

            <TextView
                android:id="@+id/centerNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernamecard"
                android:textColor="@color/editTextColorWhite"
                android:textSize="@dimen/textsize_usernamecard" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/firsword_textsize" />

                <TextView
                    android:id="@+id/addressCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/timecard_marginleftcard"
                    android:text="@string/timecard_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/firsword_textsize" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>