<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ProfileFragment">


    <include layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.PictureDetailActivity">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:id="@+id/userNameDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_usernamedetail"
                        android:text="@string/username_card_detail"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        >

                        <TextView
                            android:id="@+id/useLikeDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/textsize_likedetail"
                            android:text="10"
                            />

                        <TextView
                            android:id="@+id/secondWordDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/textsize_likenumberdetail"
                            android:text="@string/secondword_detail"
                            android:layout_marginLeft="@dimen/marginleft_secondword"
                            />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_detail"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:id="@+id/titleImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_likedetail"
                        android:text="@string/titleimage"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:paddingTop="@dimen/paddingtop_titleimagedatail"
                        />

                    <TextView
                        android:id="@+id/textContentImageDatail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_likedetail"
                        android:text="@string/lorem"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="@dimen/paddingtop_titleimagedatail"
                        android:paddingLeft="@dimen/padding_horizontal_textcontent_detail"
                        android:paddingRight="@dimen/padding_horizontal_textcontent_detail"
                        />
                    <Button
                        android:id="@+id/logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/container"
                        android:text="@string/signOut"
                        android:textColor="@color/editTextColorWhite"
                        android:theme="@style/RaisedButtonDark" />

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>



        </android.support.design.widget.CoordinatorLayout>




    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>


